force-app/main/default/objects/SKU_Pricing_Products__mdt/SKU_Pricing_Products__mdt.object-meta.xml
<CustomObject>
    <label>SKU Pricing Products</label>
    <pluralLabel>SKU Pricing Products</pluralLabel>
</CustomObject>