force-app/main/default/objects/SKU_Pricing_Products__mdt/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <label>New Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>