force-app/main/default/objects/SKU_Pricing_Products__mdt/fields/Old_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Product__c</fullName>
    <label>Old Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>