force-app/main/default/objects/SKU_Pricing_Products__mdt/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description>RWD-1316 - For Support Tiered SKUs</description>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
                <default>true</default>
                <label>E1</label>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>SE1</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>