force-app/main/default/objects/SKU_Pricing_Products__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>New_Product__c</columns>
    <columns>Old_Product__c</columns>
    <columns>Support_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Old_Product__c</field>
        <operation>equals</operation>
        <value>RBK-SVC-PREM-APPLIANCE</value>
    </filters>
    <label>All Fields</label>
</ListView>